--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: abc
+  name: jokteto
   annotations:
     dev.okteto.com/auto-ingress: "true"
 spec:
   type: ClusterIP  
   ports:
-  - name: "abc"
+  - name: "jokteto"
     port: 8080
   selector:
-    app: myu
+    app: jokteto
